# cpu_scope

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cli/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/: counter_reader.hpp  cpu_profiler.hpp  cpuscope_lib.hpp  perf_event.hpp  version.hpp
lib/src/: counter_reader.cpp  cpu_profiler.cpp  cpuscope_lib.cpp  perf_event.cpp
scripts/: build.sh  check-format.sh  format.sh  lint.sh
src/: CMakeLists.txt  cpuscope_lib.cpp  cpuscope_lib.hpp  main.cpp
tests/: CMakeLists.txt  test_counter_reader.cpp  test_cpu_profiler.cpp  test_dummy.cpp  test_main.cpp  test_perf_event.cpp
